--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -34,7 +34,7 @@ body {
 
     background-color: transparent;
     padding: 5px 0;
-    color: var(--primary-color);
+    color: #29223C;
   }
 
   @media (max-width: 575.98px) {
@@ -54,6 +54,7 @@ body {
 
     border-radius: 10px;
     box-shadow: rgba(17, 17, 26, 0.1) 0px 0px 16px;
+    padding: 12px 0;
   }
 
   .right-border{
@@ -67,6 +68,10 @@ body {
     font-size: 1.5rem;
     color: var(--primary-color);
   }
+
+  .nav-link{
+    font-size: 0.9rem;
+  }
   
   .nav-link.active {
     font-weight: bold;
@@ -75,7 +80,7 @@ body {
 
   .btn-navbar{
 
-    padding: 14px 18px;
+    padding: 10px 18px;
     border: solid 2px;
     font-weight: 600;
     border-radius: 100px;
@@ -594,7 +599,7 @@ body {
 /* news letter  */
 
 .newsletter-section {
-  background-color: #125594;
+  background-color: #0A0322;
   color: #fff;
   padding: 80px 20px;
 }
@@ -640,7 +645,7 @@ box-shadow: 0 8px 20px rgba(14, 130, 129, 0.4);
 
 
 .footer-section {
-  background-color: #125594;
+  background-color: #0A0322;
 }
 
 .footer-logo {
